# CppRepositoryTemplate

./: .gitignore  CMakeLists.txt  README.md
include/: example.h
src/: example.cpp
